src/test/deca/context/invalid/with-object/class_already_declared.deca
class A {
    int x;
}

class B{
    int y;
    float u;
}

class A{
    void f(){
        println("Hello World !");
    }
}